# meson-trials

./: .gitignore  meson.build  readme.md
src/: main.cpp
subprojects/: bullet3.wrap
